created main page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OMG project</title>
-    <link rel="stylesheet" href="./styles/style-main.css" />
+    <link rel="stylesheet" href="./styles/style-default.css" />
+    <link rel="stylesheet" href="./styles/style-index.css" />
   </head>
   <body>
     <div class="background">
@@ -14,7 +15,10 @@
             <img alt="logo" src="./img/logo.svg" />
             <h1>OMG</h1>
           </div>
-          <h4>안녕하세요? 이름과 관심분야를 등록해주세요!</h4>
+          <h4>
+            안녕하세요? <br />글로벌미디어학부 학우들의 진로 결정을 도와주는
+            OMG입니다.<br />이름과 관심분야를 등록해주세요!
+          </h4>
 
           <input
             type="text"
