add category buttons and iframes

--- a/main.html
+++ b/main.html
@@ -33,25 +33,41 @@
         </div>
         <ul>
           <li>
-            <a href="#" class="aside-btn">
+            <a
+              href="./page/grade/gradeFrame.html"
+              class="aside-btn"
+              target="iframe-section"
+            >
               <div class="menu-icon"></div>
               <p>커리큘럼</p>
             </a>
           </li>
           <li>
-            <a href="#" class="aside-btn">
+            <a
+              href="./page/club/clubFrame.html"
+              class="aside-btn"
+              target="iframe-section"
+            >
               <div class="menu-icon"></div>
               <p>동아리/소모임</p>
             </a>
           </li>
           <li>
-            <a href="#" class="aside-btn">
+            <a
+              href="./page/site/siteFrame.html"
+              class="aside-btn"
+              target="iframe-section"
+            >
               <div class="menu-icon"></div>
               <p>참고 사이트</p>
             </a>
           </li>
           <li>
-            <a href="#" class="aside-btn">
+            <a
+              href="./page/machine/machineFrame.html"
+              class="aside-btn"
+              target="iframe-section"
+            >
               <div class="menu-icon"></div>
               <p>전자기기</p>
             </a>
@@ -60,7 +76,14 @@
       </div>
     </aside>
 
-    <section class="main-section"></section>
+    <section class="main-section">
+      <iframe
+        src="./page/grade/gradeFrame.html"
+        name="iframe-section"
+        title="iframe-section"
+        frameborder="0"
+      ></iframe>
+    </section>
     <script defer type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
