--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="designPart" class="survey-button">창의력</div>
           </div>
 
-          <button type="button" class="login-btn" id="login-btn">Login</button>
+          <button type="button" class="login-btn" id="login-btn">로그인</button>
         </div>
       </section>
       <footer>
