--- a/test.html
+++ b/test.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <style>
-      body {
+      .test {
         background-color: white;
+        width: 100%;
+        height: 800px;
       }
     </style>
   </head>
   <body>
-    <h1>test</h1>
+    <div class="test">
+      <h1>test</h1>
+    </div>
   </body>
 </html>
