modified detail page and add profile

--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
         </a>
 
         <ul>
-          <li><a href="#" class="nav-btn" id="dev-menu">개발자</a></li>
-          <li><a href="#" class="nav-btn" id="design-menu">디자이너</a></li>
-          <li><a href="#" class="nav-btn" id="manager-menu">기획자</a></li>
-          <li><a href="#" class="nav-btn" id="pd-menu">PD</a></li>
+          <li><a class="nav-btn" id="dev-menu">개발자</a></li>
+          <li><a class="nav-btn" id="design-menu">디자이너</a></li>
+          <li><a class="nav-btn" id="manager-menu">기획자</a></li>
+          <li><a class="nav-btn" id="pd-menu">PD</a></li>
         </ul>
         <button id="logout-button">로그아웃</button>
       </nav>
@@ -28,31 +28,56 @@
     <aside>
       <div class="aside-container">
         <div class="user-info-wrapper">
-          <div class="user-icon"></div>
+          <div class="user-icon">
+            <img id="user-profile" alt="user-profile" />
+          </div>
           <div id="nav-user-name"></div>
         </div>
         <ul>
           <li>
             <a class="aside-btn" target="iframe-section">
-              <div class="menu-icon"></div>
+              <div
+                class="menu-icon"
+                style="background-color: rgb(76, 124, 246)"
+              >
+                <img src="./img/side-icon/img_club.svg" alt="club-icon" />
+              </div>
               <p>동아리/소모임</p>
             </a>
           </li>
           <li>
             <a class="aside-btn" target="iframe-section">
-              <div class="menu-icon"></div>
+              <div
+                class="menu-icon"
+                style="background-color: rgb(125, 187, 239)"
+              >
+                <img src="./img/side-icon/img_site.svg" alt="site-icon" />
+              </div>
               <p>참고 사이트</p>
             </a>
           </li>
           <li>
             <a class="aside-btn" target="iframe-section">
-              <div class="menu-icon"></div>
+              <div
+                class="menu-icon"
+                style="background-color: rgb(103, 123, 247)"
+              >
+                <img
+                  src="./img/side-icon/img_curriculum.svg"
+                  alt="grade-icon"
+                />
+              </div>
               <p>커리큘럼</p>
             </a>
           </li>
           <li>
             <a class="aside-btn" target="iframe-section">
-              <div class="menu-icon"></div>
+              <div
+                class="menu-icon"
+                style="background-color: rgb(159, 99, 224)"
+              >
+                <img src="./img/side-icon/img_device.svg" alt="device-icon" />
+              </div>
               <p>전자기기</p>
             </a>
           </li>
