--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <a href="#" class="logo-wrapper">
+        <a href="#" class="logo-wrapper" id="logo">
           <img src="./img/logo.svg" alt="logo" />
           <h1>OMG</h1>
         </a>
@@ -93,6 +93,11 @@
         id="major-iframe"
       ></iframe>
     </section>
+
+    <div id="home-button">
+      <img src="./img/logo.svg" alt="home button" />
+    </div>
+
     <script defer type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
