--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>OMG project</title>
     <link rel="stylesheet" href="./styles/style-default.css" />
     <link rel="stylesheet" href="./styles/style-index.css" />
+    <link rel="shortcut icon" href="./img/favicon.ico" />
+    <link rel="icon" href="./img/favicon.ico" />
   </head>
   <body>
     <div class="background">
